--- a/all_my_links_git_hub_pages_homepage.html
+++ b/all_my_links_git_hub_pages_homepage.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>AllMyLinks — Your gateway to the web</title>
+  <title>AllMyLinks — Your Gateway to the Web</title>
   <meta name="description" content="AllMyLinks — fast directory of the world's popular websites. Click icons to open sites, use search to filter categories.">
   <meta name="keywords" content="links, websites, directory, web links, favorite websites">
-  <meta name="author" content="AllMyLinks">
+  <meta name="author" content="Raju Murugan">
 
   <!-- Basic styling (single-file) -->
   <style>
@@ -15,33 +15,46 @@
       --gap:16px; --radius:12px; --max:1100px;
     }
     *{box-sizing:border-box}
-    body{font-family:Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; margin:0; background:linear-gradient(180deg,#071226 0%, #071a2b 100%); color:#e6eef6; -webkit-font-smoothing:antialiased}
+    body{
+      font-family:Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+      margin:0; background:linear-gradient(180deg,#071226 0%, #071a2b 100%);
+      color:#e6eef6; -webkit-font-smoothing:antialiased;
+    }
     .wrap{max-width:var(--max); margin:28px auto; padding:20px}
     header{display:flex; align-items:center; gap:16px}
     .brand{display:flex; align-items:center; gap:12px}
-    .logo{width:56px;height:56px;border-radius:12px;background:linear-gradient(135deg,var(--accent),#7c3aed);display:flex;align-items:center;justify-content:center;font-weight:700;font-size:20px;color:#062027}
+    .logo{
+      width:56px;height:56px;border-radius:12px;
+      background:linear-gradient(135deg,var(--accent),#7c3aed);
+      display:flex;align-items:center;justify-content:center;
+      font-weight:700;font-size:20px;color:#062027
+    }
     h1{margin:0;font-size:20px}
     p.lead{margin:4px 0 0;color:var(--muted);font-size:14px}
-
     .topbar{display:flex;gap:12px;align-items:center;margin-top:18px}
     .search{flex:1;display:flex;background:var(--glass);padding:10px;border-radius:10px;align-items:center}
     .search input{background:transparent;border:0;color:inherit;outline:none;font-size:15px;width:100%}
     .search button{background:transparent;border:0;color:var(--muted);cursor:pointer}
-
     .categories{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:var(--gap);margin-top:22px}
-    .card{background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01)); padding:14px;border-radius:var(--radius);box-shadow:0 6px 20px rgba(2,6,23,0.7);display:flex;flex-direction:column;gap:10px}
+    .card{
+      background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
+      padding:14px;border-radius:var(--radius);
+      box-shadow:0 6px 20px rgba(2,6,23,0.7);
+      display:flex;flex-direction:column;gap:10px
+    }
     .card h3{margin:0;font-size:16px}
     .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(110px,1fr));gap:10px}
-    .site{display:flex;flex-direction:column;align-items:center;gap:8px;padding:8px;border-radius:8px;background:transparent;text-align:center;cursor:pointer;transition:transform .12s ease, background .12s ease}
+    .site{
+      display:flex;flex-direction:column;align-items:center;gap:8px;padding:8px;border-radius:8px;
+      background:transparent;text-align:center;cursor:pointer;
+      transition:transform .12s ease, background .12s ease
+    }
     .site:hover{transform:translateY(-6px);background:rgba(255,255,255,0.02)}
     .icon{width:48px;height:48px;border-radius:10px;display:grid;place-items:center;font-weight:700}
     .sitename{font-size:13px;color:#dbe9f7}
     .sitedesc{font-size:11px;color:var(--muted)}
-
     footer{margin-top:26px;padding:14px;color:var(--muted);font-size:13px}
     .small{font-size:12px;color:var(--muted)}
-
-    /* responsive tweaks */
     @media (max-width:520px){.logo{width:48px;height:48px}.wrap{padding:12px}}
   </style>
 </head>
@@ -68,23 +81,22 @@
 
     <main id="content">
       <section class="categories">
+
         <!-- Category: Search Engines -->
         <article class="card" data-cat="search engines">
           <h3>Search Engines</h3>
           <div class="grid">
-            <a class="site" href="https://www.google.com" target="_blank" rel="noopener" data-title="Google" aria-label="Google">
+            <a class="site" href="https://www.google.com" target="_blank" rel="noopener" data-title="Google">
               <div class="icon" style="background:linear-gradient(135deg,#ffd54a,#ff6b6b);color:#062027">G</div>
               <div class="sitename">Google</div>
               <div class="sitedesc">Search everything</div>
             </a>
-
-            <a class="site" href="https://www.bing.com" target="_blank" rel="noopener" data-title="Bing" aria-label="Bing">
+            <a class="site" href="https://www.bing.com" target="_blank" rel="noopener" data-title="Bing">
               <div class="icon" style="background:linear-gradient(135deg,#1e88e5,#7c4dff);color:#fff">B</div>
               <div class="sitename">Bing</div>
               <div class="sitedesc">Microsoft search</div>
             </a>
-
-            <a class="site" href="https://search.yahoo.com" target="_blank" rel="noopener" data-title="Yahoo" aria-label="Yahoo">
+            <a class="site" href="https://search.yahoo.com" target="_blank" rel="noopener" data-title="Yahoo">
               <div class="icon" style="background:linear-gradient(135deg,#8e24aa,#f06292);color:#fff">Y</div>
               <div class="sitename">Yahoo</div>
               <div class="sitedesc">News and search</div>
@@ -96,24 +108,21 @@
         <article class="card" data-cat="video streaming">
           <h3>Video & Streaming</h3>
           <div class="grid">
-            <a class="site" href="https://www.youtube.com" target="_blank" rel="noopener" data-title="YouTube" aria-label="YouTube">
+            <a class="site" href="https://www.youtube.com" target="_blank" rel="noopener" data-title="YouTube">
               <div class="icon" style="background:linear-gradient(135deg,#ff4444,#ff7043);color:#fff">▶</div>
               <div class="sitename">YouTube</div>
               <div class="sitedesc">Videos & channels</div>
             </a>
-
-            <a class="site" href="https://www.netflix.com" target="_blank" rel="noopener" data-title="Netflix" aria-label="Netflix">
+            <a class="site" href="https://www.netflix.com" target="_blank" rel="noopener" data-title="Netflix">
               <div class="icon" style="background:linear-gradient(135deg,#e53935,#8e24aa);color:#fff">N</div>
               <div class="sitename">Netflix</div>
               <div class="sitedesc">Movies & series</div>
             </a>
-
-            <a class="site" href="https://www.hotstar.com" target="_blank" rel="noopener" data-title="Hotstar" aria-label="Hotstar">
+            <a class="site" href="https://www.hotstar.com" target="_blank" rel="noopener" data-title="Hotstar">
               <div class="icon" style="background:linear-gradient(135deg,#00bcd4,#4caf50);color:#062027">H</div>
               <div class="sitename">Hotstar / Disney+</div>
               <div class="sitedesc">Indian shows & sports</div>
             </a>
-
           </div>
         </article>
 
@@ -121,24 +130,21 @@
         <article class="card" data-cat="social">
           <h3>Social</h3>
           <div class="grid">
-            <a class="site" href="https://www.facebook.com" target="_blank" rel="noopener" data-title="Facebook" aria-label="Facebook">
+            <a class="site" href="https://www.facebook.com" target="_blank" rel="noopener" data-title="Facebook">
               <div class="icon" style="background:linear-gradient(135deg,#1877f2,#00bcd4);color:#fff">f</div>
               <div class="sitename">Facebook</div>
               <div class="sitedesc">Connect with people</div>
             </a>
-
-            <a class="site" href="https://twitter.com" target="_blank" rel="noopener" data-title="X Twitter" aria-label="Twitter X">
+            <a class="site" href="https://twitter.com" target="_blank" rel="noopener" data-title="X Twitter">
               <div class="icon" style="background:linear-gradient(135deg,#1da1f2,#4facfe);color:#062027">X</div>
               <div class="sitename">X / Twitter</div>
               <div class="sitedesc">Short updates</div>
             </a>
-
-            <a class="site" href="https://www.instagram.com" target="_blank" rel="noopener" data-title="Instagram" aria-label="Instagram">
+            <a class="site" href="https://www.instagram.com" target="_blank" rel="noopener" data-title="Instagram">
               <div class="icon" style="background:linear-gradient(135deg,#f58529,#dd2a7b);color:#fff">📸</div>
               <div class="sitename">Instagram</div>
               <div class="sitedesc">Photos & reels</div>
             </a>
-
           </div>
         </article>
 
@@ -146,24 +152,21 @@
         <article class="card" data-cat="shopping">
           <h3>Shopping</h3>
           <div class="grid">
-            <a class="site" href="https://www.amazon.com" target="_blank" rel="noopener" data-title="Amazon" aria-label="Amazon">
+            <a class="site" href="https://www.amazon.com" target="_blank" rel="noopener" data-title="Amazon">
               <div class="icon" style="background:linear-gradient(135deg,#ffd740,#ff8a65);color:#062027">a</div>
               <div class="sitename">Amazon</div>
               <div class="sitedesc">Shop worldwide</div>
             </a>
-
-            <a class="site" href="https://www.flipkart.com" target="_blank" rel="noopener" data-title="Flipkart" aria-label="Flipkart">
+            <a class="site" href="https://www.flipkart.com" target="_blank" rel="noopener" data-title="Flipkart">
               <div class="icon" style="background:linear-gradient(135deg,#00bcd4,#00796b);color:#062027">F</div>
               <div class="sitename">Flipkart</div>
               <div class="sitedesc">India's marketplace</div>
             </a>
-
-            <a class="site" href="https://www.aliexpress.com" target="_blank" rel="noopener" data-title="AliExpress" aria-label="AliExpress">
+            <a class="site" href="https://www.aliexpress.com" target="_blank" rel="noopener" data-title="AliExpress">
               <div class="icon" style="background:linear-gradient(135deg,#ff7043,#7c4dff);color:#fff">α</div>
               <div class="sitename">AliExpress</div>
               <div class="sitedesc">Global shopping</div>
             </a>
-
           </div>
         </article>
 
@@ -171,57 +174,54 @@
         <article class="card" data-cat="education">
           <h3>Education</h3>
           <div class="grid">
-            <a class="site" href="https://www.coursera.org" target="_blank" rel="noopener" data-title="Coursera" aria-label="Coursera">
+            <a class="site" href="https://www.coursera.org" target="_blank" rel="noopener" data-title="Coursera">
               <div class="icon" style="background:linear-gradient(135deg,#00bcd4,#3949ab);color:#062027">C</div>
               <div class="sitename">Coursera</div>
               <div class="sitedesc">Online courses</div>
             </a>
-
-            <a class="site" href="https://nptel.ac.in" target="_blank" rel="noopener" data-title="NPTEL" aria-label="NPTEL">
+            <a class="site" href="https://nptel.ac.in" target="_blank" rel="noopener" data-title="NPTEL">
               <div class="icon" style="background:linear-gradient(135deg,#ffd54a,#ff7043);color:#062027">N</div>
               <div class="sitename">NPTEL</div>
               <div class="sitedesc">Indian technical courses</div>
             </a>
-
-            <a class="site" href="https://www.khanacademy.org" target="_blank" rel="noopener" data-title="Khan Academy" aria-label="Khan Academy">
+            <a class="site" href="https://www.khanacademy.org" target="_blank" rel="noopener" data-title="Khan Academy">
               <div class="icon" style="background:linear-gradient(135deg,#7c4dff,#29b6f6);color:#fff">K</div>
               <div class="sitename">Khan Academy</div>
               <div class="sitedesc">Free learning</div>
             </a>
-
           </div>
         </article>
-
       </section>
     </main>
 
     <footer>
-      <div>© AllMyLinks — This site lists links to public websites. We do not host third‑party content. If you wish your website to be removed, contact us and we will comply.</div>
-      <div class="small" style="margin-top:8px">How to use: Download this `index.html` and upload to your GitHub repository root. To add more links, copy any &lt;a class="site" ...&gt; block and change href + text. For search/filter: type in the search box — it filters site cards live.</div>
+      <div>© 2025 AllMyLinks — This site lists links to public websites. We do not host third-party content.</div>
+      <div class="small" style="margin-top:8px">
+        Tip: Download this `index.html` and upload to your GitHub repository root. To add more links, copy any `<a class="site">...</a>` block and change the href & text.
+      </div>
     </footer>
   </div>
 
-  <!-- Minimal JS for search & UX -->
+  <!-- Minimal JS for search -->
   <script>
-    const q = document.getElementById('q');
-    const clearBtn = document.getElementById('clear');
-    q.addEventListener('input', ()=>{
-      const val = q.value.trim().toLowerCase();
-      clearBtn.style.display = val? 'inline' : 'none';
-      const sites = document.querySelectorAll('.site');
+    const q=document.getElementById('q');
+    const clearBtn=document.getElementById('clear');
+    q.addEventListener('input',()=>{
+      const val=q.value.trim().toLowerCase();
+      clearBtn.style.display=val?'inline':'none';
+      const sites=document.querySelectorAll('.site');
       sites.forEach(s=>{
-        const title = (s.dataset.title || '').toLowerCase();
-        const card = s.closest('.card');
-        const matches = title.includes(val) || (card.dataset.cat||'').toLowerCase().includes(val) || val==='';
-        s.style.display = matches? 'flex' : 'none';
+        const title=(s.dataset.title||'').toLowerCase();
+        const card=s.closest('.card');
+        const matches=title.includes(val)||(card.dataset.cat||'').toLowerCase().includes(val)||val==='';
+        s.style.display=matches?'flex':'none';
       });
-      // hide empty category cards
       document.querySelectorAll('.card').forEach(c=>{
-        const visible = c.querySelectorAll('.site:not([style*="display: none"])').length;
-        c.style.display = visible? 'flex' : 'none';
+        const visible=c.querySelectorAll('.site:not([style*="display: none"])').length;
+        c.style.display=visible?'flex':'none';
       });
     });
-    clearBtn.addEventListener('click', ()=>{q.value=''; q.dispatchEvent(new Event('input'));});
+    clearBtn.addEventListener('click',()=>{q.value='';q.dispatchEvent(new Event('input'));});
   </script>
 </body>
 </html>
