--- a/index.html
+++ b/index.html
@@ -101,6 +101,21 @@
               <div class="sitename">Yahoo</div>
               <div class="sitedesc">News and search</div>
             </a>
+             <a class="site" href="https://search.yahoo.com" target="_blank" rel="noopener" data-title="Yahoo">
+              <div class="icon" style="background:linear-gradient(135deg,#8e24aa,#f06292);color:#fff">Y</div>
+              <div class="sitename">Yahoo</div>
+              <div class="sitedesc">News and search</div>
+            </a>
+             <a class="site" href="https://search.yahoo.com" target="_blank" rel="noopener" data-title="Yahoo">
+              <div class="icon" style="background:linear-gradient(135deg,#8e24aa,#f06292);color:#fff">Y</div>
+              <div class="sitename">Yahoo</div>
+              <div class="sitedesc">News and search</div>
+            </a>
+             <a class="site" href="https://search.yahoo.com" target="_blank" rel="noopener" data-title="Yahoo">
+              <div class="icon" style="background:linear-gradient(135deg,#8e24aa,#f06292);color:#fff">Y</div>
+              <div class="sitename">Yahoo</div>
+              <div class="sitedesc">News and search</div>
+            </a>
           </div>
         </article>
 
