--- a/index.html
+++ b/index.html
@@ -8,232 +8,150 @@
   <meta name="keywords" content="links, websites, directory, web links, favorite websites">
   <meta name="author" content="Raju Murugan">
 
-  <!-- Basic styling (single-file) -->
   <style>
-    :root{
-      --bg:#0f1724; --card:#0b1220; --muted:#9aa4b2; --accent:#06b6d4; --glass: rgba(255,255,255,0.03);
-      --gap:16px; --radius:12px; --max:1100px;
+    :root {
+      --bg: #0f1724; --card: #0b1220; --muted: #9aa4b2; --accent: #06b6d4; 
+      --glass: rgba(255,255,255,0.03); --radius: 12px; --max: 1100px;
     }
-    *{box-sizing:border-box}
-    body{
-      font-family:Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-      margin:0; background:linear-gradient(180deg,#071226 0%, #071a2b 100%);
-      color:#e6eef6; -webkit-font-smoothing:antialiased;
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+    body {
+      font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+      background: linear-gradient(180deg,#071226 0%, #071a2b 100%);
+      color: #e6eef6;
     }
-    .wrap{max-width:var(--max); margin:28px auto; padding:20px}
-    header{display:flex; align-items:center; gap:16px}
-    .brand{display:flex; align-items:center; gap:12px}
-    .logo{
-      width:56px;height:56px;border-radius:12px;
-      background:linear-gradient(135deg,var(--accent),#7c3aed);
-      display:flex;align-items:center;justify-content:center;
-      font-weight:700;font-size:20px;color:#062027
+    .wrap { max-width: var(--max); margin: 28px auto; padding: 20px; }
+
+    header { display: flex; align-items: center; gap: 16px; }
+    .logo {
+      width: 56px; height: 56px; border-radius: 12px;
+      background: linear-gradient(135deg,var(--accent),#7c3aed);
+      display: flex; align-items: center; justify-content: center;
+      font-weight: 700; font-size: 20px; color: #062027;
     }
-    h1{margin:0;font-size:20px}
-    p.lead{margin:4px 0 0;color:var(--muted);font-size:14px}
-    .topbar{display:flex;gap:12px;align-items:center;margin-top:18px}
-    .search{flex:1;display:flex;background:var(--glass);padding:10px;border-radius:10px;align-items:center}
-    .search input{background:transparent;border:0;color:inherit;outline:none;font-size:15px;width:100%}
-    .search button{background:transparent;border:0;color:var(--muted);cursor:pointer}
-    .categories{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:var(--gap);margin-top:22px}
-    .card{
-      background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
-      padding:14px;border-radius:var(--radius);
-      box-shadow:0 6px 20px rgba(2,6,23,0.7);
-      display:flex;flex-direction:column;gap:10px
+    h1 { margin: 0; font-size: 22px; }
+    p.lead { color: var(--muted); font-size: 14px; margin-top: 4px; }
+
+    .search-bar {
+      display: flex; align-items: center;
+      background: var(--glass); padding: 10px;
+      border-radius: 10px; margin-top: 20px;
     }
-    .card h3{margin:0;font-size:16px}
-    .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(110px,1fr));gap:10px}
-    .site{
-      display:flex;flex-direction:column;align-items:center;gap:8px;padding:8px;border-radius:8px;
-      background:transparent;text-align:center;cursor:pointer;
-      transition:transform .12s ease, background .12s ease
+    .search-bar input {
+      background: transparent; border: none; outline: none;
+      color: inherit; font-size: 15px; width: 100%;
     }
-    .site:hover{transform:translateY(-6px);background:rgba(255,255,255,0.02)}
-    .icon{width:48px;height:48px;border-radius:10px;display:grid;place-items:center;font-weight:700}
-    .sitename{font-size:13px;color:#dbe9f7}
-    .sitedesc{font-size:11px;color:var(--muted)}
-    footer{margin-top:26px;padding:14px;color:var(--muted);font-size:13px}
-    .small{font-size:12px;color:var(--muted)}
-    @media (max-width:520px){.logo{width:48px;height:48px}.wrap{padding:12px}}
+    .search-bar button { background: transparent; border: none; color: var(--muted); cursor: pointer; }
+
+    section { margin-top: 30px; }
+    h2 { font-size: 18px; margin-bottom: 12px; }
+
+    .link-list { display: flex; flex-direction: column; gap: 10px; }
+    .site {
+      display: flex; align-items: center; gap: 12px;
+      background: var(--glass); border-radius: 10px;
+      padding: 10px 14px; transition: background .15s ease;
+      text-decoration: none; color: #e6eef6;
+    }
+    .site:hover { background: rgba(255,255,255,0.05); transform: translateY(-2px); }
+    .icon {
+      width: 40px; height: 40px; border-radius: 8px;
+      display: flex; align-items: center; justify-content: center;
+      font-weight: 700; color: #062027;
+    }
+    .info { flex: 1; }
+    .sitename { font-size: 15px; font-weight: 600; }
+    .sitedesc { font-size: 12px; color: var(--muted); }
+
+    footer { margin-top: 40px; text-align: center; color: var(--muted); font-size: 13px; }
   </style>
 </head>
+
 <body>
   <div class="wrap">
     <header>
-      <div class="brand">
-        <div class="logo">AL</div>
-        <div>
-          <h1>AllMyLinks</h1>
-          <p class="lead">One place to open the world's most popular websites — organized and searchable.</p>
-        </div>
+      <div class="logo">AL</div>
+      <div>
+        <h1>AllMyLinks</h1>
+        <p class="lead">All your favorite websites — neatly organized in one place.</p>
       </div>
     </header>
 
-    <div class="topbar">
-      <div class="search" role="search">
-        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" style="margin-right:8px;opacity:.8"><path d="M21 21l-4.35-4.35" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path><circle cx="11" cy="11" r="6" stroke="currentColor" stroke-width="1.5"></circle></svg>
-        <input id="q" placeholder="Search sites or categories (e.g., news, education, youtube)..." autocomplete="off">
-        <button id="clear" title="Clear" style="display:none">✕</button>
-      </div>
-      <div class="small">Tip: Click any icon to open the site in a new tab</div>
+    <div class="search-bar">
+      <svg width="18" height="18" viewBox="0 0 24 24" fill="none" style="margin-right:8px;opacity:.8">
+        <path d="M21 21l-4.35-4.35" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+        <circle cx="11" cy="11" r="6" stroke="currentColor" stroke-width="1.5"></circle>
+      </svg>
+      <input id="search" placeholder="Search any site or category...">
+      <button id="clear" title="Clear" style="display:none;">✕</button>
     </div>
 
-    <main id="content">
-      <section class="categories">
-
-        <!-- Category: Search Engines -->
-        <article class="card" data-cat="search engines">
-          <h3>Search Engines</h3>
-          <div class="grid">
-            <a class="site" href="https://www.google.com" target="_blank" rel="noopener" data-title="Google">
-              <div class="icon" style="background:linear-gradient(135deg,#ffd54a,#ff6b6b);color:#062027">G</div>
-              <div class="sitename">Google</div>
-              <div class="sitedesc">Search everything</div>
-            </a>
-            <a class="site" href="https://www.bing.com" target="_blank" rel="noopener" data-title="Bing">
-              <div class="icon" style="background:linear-gradient(135deg,#1e88e5,#7c4dff);color:#fff">B</div>
-              <div class="sitename">Bing</div>
-              <div class="sitedesc">Microsoft search</div>
-            </a>
-            <a class="site" href="https://search.yahoo.com" target="_blank" rel="noopener" data-title="Yahoo">
-              <div class="icon" style="background:linear-gradient(135deg,#8e24aa,#f06292);color:#fff">Y</div>
-              <div class="sitename">Yahoo</div>
-              <div class="sitedesc">News and search</div>
-            </a>
-             <a class="site" href="https://search.yahoo.com" target="_blank" rel="noopener" data-title="Yahoo">
-              <div class="icon" style="background:linear-gradient(135deg,#8e24aa,#f06292);color:#fff">Y</div>
-              <div class="sitename">Yahoo</div>
-              <div class="sitedesc">News and search</div>
-            </a>
-             <a class="site" href="https://search.yahoo.com" target="_blank" rel="noopener" data-title="Yahoo">
-              <div class="icon" style="background:linear-gradient(135deg,#8e24aa,#f06292);color:#fff">Y</div>
-              <div class="sitename">Yahoo</div>
-              <div class="sitedesc">News and search</div>
-            </a>
-             <a class="site" href="https://search.yahoo.com" target="_blank" rel="noopener" data-title="Yahoo">
-              <div class="icon" style="background:linear-gradient(135deg,#8e24aa,#f06292);color:#fff">Y</div>
-              <div class="sitename">Yahoo</div>
-              <div class="sitedesc">News and search</div>
-            </a>
+    <!-- Category: Search Engines -->
+    <section>
+      <h2>🔍 Search Engines</h2>
+      <div class="link-list">
+        <a href="https://www.google.com" class="site" target="_blank">
+          <div class="icon" style="background:linear-gradient(135deg,#ffd54a,#ff6b6b)">G</div>
+          <div class="info">
+            <div class="sitename">Google</div>
+            <div class="sitedesc">Search everything instantly</div>
           </div>
-        </article>
+        </a>
+        <a href="https://www.bing.com" class="site" target="_blank">
+          <div class="icon" style="background:linear-gradient(135deg,#1e88e5,#7c4dff);color:#fff">B</div>
+          <div class="info"><div class="sitename">Bing</div><div class="sitedesc">Microsoft’s search engine</div></div>
+        </a>
+        <a href="https://search.yahoo.com" class="site" target="_blank">
+          <div class="icon" style="background:linear-gradient(135deg,#8e24aa,#f06292);color:#fff">Y</div>
+          <div class="info"><div class="sitename">Yahoo</div><div class="sitedesc">News and web search</div></div>
+        </a>
+      </div>
+    </section>
 
-        <!-- Category: Video & Streaming -->
-        <article class="card" data-cat="video streaming">
-          <h3>Video & Streaming</h3>
-          <div class="grid">
-            <a class="site" href="https://www.youtube.com" target="_blank" rel="noopener" data-title="YouTube">
-              <div class="icon" style="background:linear-gradient(135deg,#ff4444,#ff7043);color:#fff">▶</div>
-              <div class="sitename">YouTube</div>
-              <div class="sitedesc">Videos & channels</div>
-            </a>
-            <a class="site" href="https://www.netflix.com" target="_blank" rel="noopener" data-title="Netflix">
-              <div class="icon" style="background:linear-gradient(135deg,#e53935,#8e24aa);color:#fff">N</div>
-              <div class="sitename">Netflix</div>
-              <div class="sitedesc">Movies & series</div>
-            </a>
-            <a class="site" href="https://www.hotstar.com" target="_blank" rel="noopener" data-title="Hotstar">
-              <div class="icon" style="background:linear-gradient(135deg,#00bcd4,#4caf50);color:#062027">H</div>
-              <div class="sitename">Hotstar / Disney+</div>
-              <div class="sitedesc">Indian shows & sports</div>
-            </a>
-          </div>
-        </article>
+    <!-- Category: Video -->
+    <section>
+      <h2>🎬 Video & Streaming</h2>
+      <div class="link-list">
+        <a href="https://www.youtube.com" class="site" target="_blank">
+          <div class="icon" style="background:linear-gradient(135deg,#ff4444,#ff7043);color:#fff">▶</div>
+          <div class="info"><div class="sitename">YouTube</div><div class="sitedesc">Watch & share videos</div></div>
+        </a>
+        <a href="https://www.netflix.com" class="site" target="_blank">
+          <div class="icon" style="background:linear-gradient(135deg,#e53935,#8e24aa);color:#fff">N</div>
+          <div class="info"><div class="sitename">Netflix</div><div class="sitedesc">Movies & series</div></div>
+        </a>
+      </div>
+    </section>
 
-        <!-- Category: Social -->
-        <article class="card" data-cat="social">
-          <h3>Social</h3>
-          <div class="grid">
-            <a class="site" href="https://www.facebook.com" target="_blank" rel="noopener" data-title="Facebook">
-              <div class="icon" style="background:linear-gradient(135deg,#1877f2,#00bcd4);color:#fff">f</div>
-              <div class="sitename">Facebook</div>
-              <div class="sitedesc">Connect with people</div>
-            </a>
-            <a class="site" href="https://twitter.com" target="_blank" rel="noopener" data-title="X Twitter">
-              <div class="icon" style="background:linear-gradient(135deg,#1da1f2,#4facfe);color:#062027">X</div>
-              <div class="sitename">X / Twitter</div>
-              <div class="sitedesc">Short updates</div>
-            </a>
-            <a class="site" href="https://www.instagram.com" target="_blank" rel="noopener" data-title="Instagram">
-              <div class="icon" style="background:linear-gradient(135deg,#f58529,#dd2a7b);color:#fff">📸</div>
-              <div class="sitename">Instagram</div>
-              <div class="sitedesc">Photos & reels</div>
-            </a>
-          </div>
-        </article>
+    <!-- Category: Social -->
+    <section>
+      <h2>💬 Social</h2>
+      <div class="link-list">
+        <a href="https://www.facebook.com" class="site" target="_blank">
+          <div class="icon" style="background:linear-gradient(135deg,#1877f2,#00bcd4);color:#fff">f</div>
+          <div class="info"><div class="sitename">Facebook</div><div class="sitedesc">Connect with friends</div></div>
+        </a>
+        <a href="https://twitter.com" class="site" target="_blank">
+          <div class="icon" style="background:linear-gradient(135deg,#1da1f2,#4facfe);color:#062027">X</div>
+          <div class="info"><div class="sitename">X / Twitter</div><div class="sitedesc">Short updates & trends</div></div>
+        </a>
+      </div>
+    </section>
 
-        <!-- Category: Shopping -->
-        <article class="card" data-cat="shopping">
-          <h3>Shopping</h3>
-          <div class="grid">
-            <a class="site" href="https://www.amazon.com" target="_blank" rel="noopener" data-title="Amazon">
-              <div class="icon" style="background:linear-gradient(135deg,#ffd740,#ff8a65);color:#062027">a</div>
-              <div class="sitename">Amazon</div>
-              <div class="sitedesc">Shop worldwide</div>
-            </a>
-            <a class="site" href="https://www.flipkart.com" target="_blank" rel="noopener" data-title="Flipkart">
-              <div class="icon" style="background:linear-gradient(135deg,#00bcd4,#00796b);color:#062027">F</div>
-              <div class="sitename">Flipkart</div>
-              <div class="sitedesc">India's marketplace</div>
-            </a>
-            <a class="site" href="https://www.aliexpress.com" target="_blank" rel="noopener" data-title="AliExpress">
-              <div class="icon" style="background:linear-gradient(135deg,#ff7043,#7c4dff);color:#fff">α</div>
-              <div class="sitename">AliExpress</div>
-              <div class="sitedesc">Global shopping</div>
-            </a>
-          </div>
-        </article>
-
-        <!-- Category: Education -->
-        <article class="card" data-cat="education">
-          <h3>Education</h3>
-          <div class="grid">
-            <a class="site" href="https://www.coursera.org" target="_blank" rel="noopener" data-title="Coursera">
-              <div class="icon" style="background:linear-gradient(135deg,#00bcd4,#3949ab);color:#062027">C</div>
-              <div class="sitename">Coursera</div>
-              <div class="sitedesc">Online courses</div>
-            </a>
-            <a class="site" href="https://nptel.ac.in" target="_blank" rel="noopener" data-title="NPTEL">
-              <div class="icon" style="background:linear-gradient(135deg,#ffd54a,#ff7043);color:#062027">N</div>
-              <div class="sitename">NPTEL</div>
-              <div class="sitedesc">Indian technical courses</div>
-            </a>
-            <a class="site" href="https://www.khanacademy.org" target="_blank" rel="noopener" data-title="Khan Academy">
-              <div class="icon" style="background:linear-gradient(135deg,#7c4dff,#29b6f6);color:#fff">K</div>
-              <div class="sitename">Khan Academy</div>
-              <div class="sitedesc">Free learning</div>
-            </a>
-          </div>
-        </article>
-      </section>
-    </main>
-
-    <footer>
-      <div>© 2025 AllMyLinks — This site lists links to public websites. We do not host third-party content.</div>
-    </footer>
+    <footer>© 2025 AllMyLinks — Curated links to the world’s top sites.</footer>
   </div>
 
-  <!-- Minimal JS for search -->
   <script>
-    const q=document.getElementById('q');
-    const clearBtn=document.getElementById('clear');
+    const q=document.getElementById('search');
+    const clear=document.getElementById('clear');
     q.addEventListener('input',()=>{
-      const val=q.value.trim().toLowerCase();
-      clearBtn.style.display=val?'inline':'none';
-      const sites=document.querySelectorAll('.site');
-      sites.forEach(s=>{
-        const title=(s.dataset.title||'').toLowerCase();
-        const card=s.closest('.card');
-        const matches=title.includes(val)||(card.dataset.cat||'').toLowerCase().includes(val)||val==='';
-        s.style.display=matches?'flex':'none';
-      });
-      document.querySelectorAll('.card').forEach(c=>{
-        const visible=c.querySelectorAll('.site:not([style*="display: none"])').length;
-        c.style.display=visible?'flex':'none';
+      const val=q.value.toLowerCase().trim();
+      clear.style.display=val?'inline':'none';
+      document.querySelectorAll('.site').forEach(site=>{
+        const text=site.textContent.toLowerCase();
+        site.style.display=text.includes(val)?'flex':'none';
       });
     });
-    clearBtn.addEventListener('click',()=>{q.value='';q.dispatchEvent(new Event('input'));});
+    clear.addEventListener('click',()=>{q.value='';q.dispatchEvent(new Event('input'));});
   </script>
 </body>
 </html>
